feat: finalizando rota para busca no elasticsearch e ajustes de mensagens
