# api-fitness-foods-lc/app/Application/Routes/api/errors.php
@@ -1,0 +1,8 @@
+<?php
+
+use Application\Http\Controllers\Errors\GetErrorsElasticsearchController;
+use Illuminate\Support\Facades\Route;
+
+Route::prefix('errors')->name('.errors')->group(function () {
+    Route::get('/', GetErrorsElasticsearchController::class)->name('.get.all');
+});
